# endless-void

./: .gitignore  CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
lodepng/: CMakeLists.txt
resources/: default_frag.glsl  default_vert.glsl  text_frag.glsl  text_vert.glsl
src/: endless_void.cpp  endless_void.h  main.cpp  path_generator.cpp  path_generator.h  player.cpp  player.h  render_loader.cpp  render_loader.h  world.cpp  world.h
src/entity/: entity.cpp  entity.h  platform.cpp  platform.h  platform_stone1.cpp  platform_stone1.h  void_entity.cpp  void_entity.h
src/gui/: gui.cpp
src/input/: input_manager.cpp  input_manager.h
src/physics/: aabb.cpp  aabb.h  dynamic_aabb.cpp  dynamic_aabb.h  math.cpp  math.h  physics_engine.cpp  physics_engine.h
src/render/: camera.cpp  camera.h  font_manager.cpp  font_manager.h  render_engine.cpp  render_engine.h  render_entity.cpp  render_entity.h  render_gui.cpp  render_gui.h  render_loader.cpp  render_loader.h  texture_manager.cpp  texture_manager.h  wf_obj_manager.cpp  wf_obj_manager.h
src/state/: state.h  state_ingame.cpp  state_ingame.h
